syntax = "proto3";

package user.v1;

import "buf/validate/validate.proto";
import "user/v1/user.proto";

option go_package = "github.com/wizlif/tempmee_assignment/user/v1";

message CreateUserRequest {
  string username = 1;
  string full_name = 2;
  string email = 3  [
    (buf.validate.field).string.email = true,
    (buf.validate.field).required = true
    ];
  string password = 4;
}

message CreateUserResponse {
  User user = 1;
}
