syntax = "proto3";

package user.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/v1/rpc_create_user.proto";

option go_package = "github.com/wizlif/tempmee_assignment/user/v1";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "TempMee Assignment API";
    version: "1.0";
    contact: {
      name: "Isaac Obella";
      url: "https://github.com/wizlif";
      email: "techschool.guru@gmail.com";
    };
  };
};

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option (google.api.http) = {
      post: "/v1/user/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create a new user";
      summary: "Create new user";
    };
  }
}
